fixed spacing,colors,alignment

--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -12,6 +12,14 @@
       }
     }
 
+    &:hover {
+      a {
+        svg {
+          color: #fff;
+        }
+      }
+    }
+
     &.disabled {
       .pagination-link {
         background-color: color(gray-0);
