--- a/src/scss/layout/_blog-sidebar.scss
+++ b/src/scss/layout/_blog-sidebar.scss
@@ -97,11 +97,11 @@
       padding-left: 45px;
       font-size: 16px;
       line-height: 20.8px;
-      color: color(gray-4);
+      color: color(gray-9);
       text-transform: capitalize;
       &::placeholder {
         font-size: inherit;
-        color: inherit;
+        color: colo(gray-4);
       }
     }
     .icon {
