--- a/src/scss/layout/_contact-form.scss
+++ b/src/scss/layout/_contact-form.scss
@@ -103,7 +103,6 @@
     border-radius: 6px;
     border: 1px solid #e5e5e5;
     margin-bottom: 16px;
-    // overflow: hidden;
     label {
       position: absolute;
       top: -26px;
@@ -156,7 +155,7 @@
     }
     label {
       font-size: 14px;
-      line-height: 21px;
+      line-height: 28px;
       color: color(gray-6);
       text-transform: capitalize;
       font-weight: 400;
