--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -445,5 +445,8 @@
         height: inherit;
       }
     }
+    h5 {
+      color: color(gray-9);
+    }
   }
 }
